src/test/compile-fail/no_crate_type.rs
// regresion test for issue 11256
#[crate_type];  //~ ERROR `crate_type` requires a value

fn main() {
    return
}
